--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^2.5.3"
+  },
+  "dependencies": {
+    "azure-storage": "^1.1.0"
   }
 }
